# upvtc-course-timetabler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  conanfile.txt  docker-compose.prod.yml  docker-compose.yml  manage.py  prod-docker-compose.sh  setup.py
.config/: db.env  db.env.sample  web.env  web.env.sample
.config/docker-compose/: db.env.sample  web.env.sample
cmake/: BuildType.cmake
config/: app.config.sample
data/: courses.json.sample  divisions.json.sample  ges_electives.json.sample  irregular_student_groups.json.sample  regular_student_ges_electives.json.sample  room_features.json.sample  rooms.json.sample  student_groups.json.sample  study_plans.json.sample  teachers.json.sample
scheduler/: models.py
src/: CMakeLists.txt  main.cpp
src/upvtc_ct/: CMakeLists.txt
src/upvtc_ct/ds/: CMakeLists.txt  models.cpp  models.hpp
src/upvtc_ct/preprocessor/: CMakeLists.txt  data_manager.cpp  data_manager.hpp  preprocessor.cpp  preprocessor.hpp
src/upvtc_ct/timetabler/: CMakeLists.txt  timetabler.cpp  timetabler.hpp
src/upvtc_ct/utils/: CMakeLists.txt  data_manager.cpp  data_manager.hpp  errors.cpp  errors.hpp  hash_specializations.hpp  utils.hpp
upvtc_ct/: app.py  class_autogenerator.py  gui.py  models.py  scheduler.py  settings.py  urls.py  utils.py  wsgi.py
upvtc_ct/data_autogenerator/: __init__.py  _class_autogenerator.py  _name_autogenerator.py
upvtc_ct/scheduler/: __init__.py  _cost_computation.py  _ds.py  _exceptions.py  _generator.py  _scheduler.py  _utils.py
upvtc_ct/static/css/: base.css
upvtc_ct/templates/: base.html
upvtc_ct/visualizer/: _timetable.py
users/static/users/css/: login.css
users/templates/users/: login.html
