################################################################################
# Set up CMake.                                                                #
################################################################################
cmake_minimum_required(VERSION 3.13)

################################################################################
# Set up compilation of the data structures module.                            #
################################################################################
add_library(upvtc_ct-lib-ds STATIC "")
target_sources(upvtc_ct-lib-ds
    PRIVATE
        models.cpp
)
